Force overflow-x:hidden to prevent horizontal scroll bar on filter content

--- a/app/frontend/styles/_filter.scss
+++ b/app/frontend/styles/_filter.scss
@@ -1,4 +1,5 @@
 .moj-filter-layout__content {
+  overflow-x: hidden;
   .moj-action-bar {
     height: 60px;
   }
